Prefacio y portada casi traducidos

--- a/book/book.tex
+++ b/book/book.tex
@@ -33,8 +33,8 @@
 
 \title{Think Python}
 \author{Allen B. Downey}
-\newcommand{\thetitle}{Think Python: How to Think Like a Computer Scientist}
-\newcommand{\theversion}{2nd Edition, Version 2.4.0}
+\newcommand{\thetitle}{Think Python: Cómo pensar como un informático}
+\newcommand{\theversion}{2da Edición, Versión 2.4.0}
 \newcommand{\thedate}{}
 
 % these styles get translated in CSS for the HTML version
@@ -99,7 +99,7 @@
 
 \begin{spacing}{3}
 {\huge Think Python}\\
-{\Large How to Think Like a Computer Scientist}
+{\Large Cómo pensar como un informático}
 \end{spacing}
 
 \vspace{0.25in}
@@ -130,7 +130,7 @@
 
 \begin{spacing}{3}
 {\huge Think Python}\\
-{\Large How to Think Like a Computer Scientist}
+{\Large Cómo pensar como un informático}
 \end{spacing}
 
 \vspace{0.25in}
@@ -175,16 +175,16 @@ Green Tea Press       \\
 Needham MA 02492
 \end{flushleft}
 
-Permission is granted to copy, distribute, and/or modify this document
-under the terms of the Creative Commons Attribution-NonCommercial 3.0 Unported
-License, which is available at \url{http://creativecommons.org/licenses/by-nc/3.0/}.
+Se concede permiso para copiar, distribuir y/o modificar este documento
+bajo los términos de la Licencia Creative Commons Attribution-NonCommercial
+3.0 Unported, la cual está disponible en \url{http://creativecommons.org/licenses/by-nc/3.0/}.
 
-The original form of this book is \LaTeX\ source code.  Compiling this
-\LaTeX\ source has the effect of generating a device-independent
-representation of a textbook, which can be converted to other formats
-and printed.
+La forma original de este libro es en código fuente de \LaTeX\ .  Compilar esta
+fuente de \LaTeX\ tiene el efecto de generar una representación de un libro de texto
+independiente del dispositivo, el cual se puede convertir a otros formatos
+e imprimir.
 
-The \LaTeX\ source for this book is available from
+La fuente de \LaTeX\ para este libro está disponible en
 \url{http://www.thinkpython2.com}
 
 \vspace{0.2in}
@@ -220,10 +220,10 @@ The \LaTeX\ source for this book is available from
 
 \section*{La extraña historia de este libro}
 
-En enero de 1999, me estuve preparando para enseñar un curso introductorio
+En enero de 1999, me estaba preparando para enseñar un curso introductorio
 de programación en Java.  Lo había enseñado tres veces y me estaba frustrando.
-La tasa de fracaso en el curso era muy alta y, incluso para estudiantes que
-tenían éxito, el nivel general de logros fue muy bajo.
+La tasa de fracaso en el curso era muy alta y, aún para estudiantes que
+tenían éxito, el nivel general de logros era muy bajo.
 
 Uno de los problemas que vi tenía relación con los libros.
 Eran muy grandes, con demasiados detalles innecesarios sobre Java, y
@@ -241,13 +241,13 @@ Mis objetivos eran:
 \item Que sea corto.  Es mejor para los estudiantes leer 10 páginas que
 no leer 50 páginas.
 
-\item Cuidado con el vocabulario.  Intenté minimizar la jerga y
+\item Tener cuidado con el vocabulario.  Intenté minimizar la jerga y
 definir cada término en el primer uso.
 
 \item Construir de manera gradual. Para evitar trampillas, tomé los temas más difíciles
 y los dividí en series de pasos pequeños.
 
-\item Foco en programar, no en el lenguaje de programación.  Incluí
+\item Concentrarse en la programación, no en el lenguaje de programación.  Incluí
 el mínimo subconjunto útil de Java y excluí el resto.
 
 \end{itemize}
@@ -274,7 +274,7 @@ publiqué la primera versión en Python en 2001.
 
 En 2003 empecé a enseñar en el Olin College y tuve que enseñar Python
 por primera vez.  El contraste con Java fue notable.
-Los estudiantes se esforzaron menos, aprendieron más, trabajaron en más
+Los estudiantes se esforzaban menos, aprendían más, trabajaban en más
 proyectos interesantes y generalmente se divertían mucho.
 \index{Olin College}
 
@@ -313,15 +313,15 @@ La segunda edición de {\em Think Python} tiene nuevas características:
 
 \item Agregué unas pocas secciones, y más detalles en la web, para ayudar a
 los principiantes a empezar a ejecutar Python en un navegador, así que no
-tienes que lidiar con la instalación de Python hasta que tú quieras.
+tienes que lidiar con la instalación de Python hasta que tú quieras hacerlo.
 
-\item Para el Capítulo~\ref{turtle} cambié de mi propio paquete de gráfica
-  tortuga, llamado Swampy, a un módulo de Python más estándar, {\tt
-    turtle}, el cual es más fácil de instalar y más poderoso.
+\item Para el Capítulo~\ref{turtle} cambié mi propio paquete de gráfica
+  tortuga, llamado Swampy, por un módulo de Python más estándar, {\tt
+    turtle}, que es más fácil de instalar y más poderoso.
 
-\item Agregué un nuevo capítulo llamado ``The Goodies'', el cual introduce
-algunas características adicionales de Python que no son estríctamente
-necesarias, pero a veces prácticas.
+\item Agregué un nuevo capítulo llamado ``Trucos extra'', el cual introduce
+algunas características adicionales de Python que no son estrictamente
+necesarias, pero a veces son prácticas.
 
 \end{itemize}
 
@@ -342,16 +342,16 @@ proyecto y me presentó lo que ha resultado ser mi
 lenguaje favorito.
 \index{Elkner, Jeff}
 
-Gracias también a Chris Meyers, quien contribuyó varias secciones
-a {\em How to Think Like a Computer Scientist}.
+Gracias también a Chris Meyers, quien contribuyó a varias secciones
+de {\em How to Think Like a Computer Scientist}.
 \index{Meyers, Chris}
 
 Gracias a la Free Software Foundation por desarrollar
-la Licencia de documentación libre de GNU, la cual me ayudó
+la Licencia de documentación libre de GNU, que me ayudó
 a hacer posible mi colaboración con Jeff y Chris, y a Creative
 Commons por la licencia que uso ahora.
-\index{GNU Free Documentation License}
-\index{Free Documentation License, GNU}
+\index{Licencia de documentación libre de GNU}
+\index{GNU, Licencia de documentación libre}
 \index{Creative Commons}
 
 Gracias a los editores de Lulu que trabajaron en
@@ -370,7 +370,7 @@ a continuacion) que enviaron correcciones y sugerencias.
 \index{contributors}
 Más de 100 lectores perspicaces y atentos han enviado
 sugerencias y correcciones en los últimos años.  Sus
-contribuciones, y entusiasmo por este proyecto, han sido una
+contribuciones, y su entusiasmo por este proyecto, han sido una
 ayuda enorme.
 
 Si tienes una sugerencia o corrección, por favovr envía un email a
@@ -380,7 +380,7 @@ retroalimentación, te agregaré a la lista de colaboradores
 
 Si incluyes al menos una parte de la oración en donde
 aparece el error, eso me facilita la búsqueda.  Números de página
-y sección están bien también, pero no tan fácil para trabajar.
+y de sección están bien también, pero el trabajo no es tan fácil.
 ¡Gracias!
 
 \begin{itemize}
@@ -388,7 +388,7 @@ y sección están bien también, pero no tan fácil para trabajar.
 \small
 \item Lloyd Hugh Allen envió una corrección a la Sección 8.4.
 
-\item Yvon Boulianne envió una corrección de un error semántico en
+\item Yvon Boulianne envió una corrección a un error semántico en
 el Capítulo 5.
 
 \item Fred Bremmer envió una corrección en la Sección 2.1.
@@ -407,7 +407,7 @@ corrección a un error chistoso en la Sección 5.6.
 fue usado como un estudio de caso en una versión anterior del libro.  Su
 programa encontrarse ahora en el sitio web.
 
-\item Lee Harr envió más correcciones de las que caben acá para listar
+\item Lee Harr envió más correcciones de las que cabrían acá en una lista
 y, de hecho, debería aparecer como uno de los principales editores
 del texto.
 
@@ -425,40 +425,40 @@ se ejecuta y nos ayudó a configurar un esquema de versionamiento.
 \item Man-Yong Lee envió una corrección al código de ejemplo en la
 Sección 2.4.
 
-\item David Mayo advirtió que la palabra ``unconsciously"
+\item David Mayo advirtió que la palabra ``inconsciente''
 en el Capítulo 1 necesitaba
-ser cambiada a ``subconsciously".
+ser cambiada a ``subconsciente''.
 
 \item Chris McAloon envió muchas correcciones a las Secciones 3.9 y
 3.10.
 
-\item Matthew J. Moelter has been a long-time contributor who sent
-in numerous corrections and suggestions to the book.
+\item Matthew J. Moelter ha sido un colaborador por mucho tiempo que envió
+numerosas correcciones y sugerencias al libro.
 
-\item Simon Dicon Montford reported a missing function definition and
-several typos in Chapter 3.  He also found errors in the {\tt increment}
-function in Chapter 13.
+\item Simon Dicon Montford informó una definición de función faltante y
+muchos errores tipográficos en el Capítulo 3.  Además, encontró errores en la función {\tt increment}
+en el Capítulo 13.
 
-\item John Ouzts corrected the definition of ``return value"
-in Chapter 3.
+\item John Ouzts corrigió la definición de ``return value''
+en el Capítulo 3.
 
-\item Kevin Parks sent in valuable comments and suggestions as to how
-to improve the distribution of the book.
+\item Kevin Parks envió valiosos comentarios y sugerencias en cuanto a cómo
+mejorar la distribución del libro.
 
-\item David Pool sent in a typo in the glossary of Chapter 1, as well
-as kind words of encouragement.
+\item David Pool envió un error tipográfico en el glosario del Capítulo 1, así como
+amables palabras de aliento.
 
 \item Michael Schmitt envió una corrección al capítulo de archivos
 y excepciones.
 
-\item Robin Shaw pointed out an error in Section 13.1, where the
-printTime function was used in an example without being defined.
+\item Robin Shaw señaló un error en la Sección 13.1, donde la
+función printTime se usó en un ejemplo sin ser definida.
 
-\item Paul Sleigh found an error in Chapter 7 and a bug in Jonah Cohen's
-Perl script that generates HTML from LaTeX.
+\item Paul Sleigh encontró un error en el Capítulo 7 y un error en el script de Perl
+de Jonah Cohen que genera HTML a partir de LaTeX.
 
-\item Craig T. Snydal is testing the text in a course at Drew
-University.  He has contributed several valuable suggestions and corrections.
+\item Craig T. Snydal está probando el texto en un curso en la Drew
+University.  Ha aportado muchas sugerencias y correcciones valiosas.
 
 \item Ian Thomas y sus alumnos están usando el texto en un curso de
 programación.  Ellos son los primeros en probar los capítulos de la segunda mitad
@@ -466,8 +466,8 @@ del libro, y han hecho numerosas correcciones y sugerencicas.
 
 \item Keith Verheyden envió una correción en en Capítulo 3.
 
-\item Peter Winstanley let us know about a longstanding error in
-our Latin in Chapter 3.
+\item Peter Winstanley nos hizo saber sobre un error en
+nuestro Latin que estuvo por mucho tiempo en el Capítulo 3.
 
 \item Chris Wrobel made corrections to the code in the chapter on
 file I/O and exceptions.
@@ -476,90 +476,90 @@ file I/O and exceptions.
 In addition to writing the first draft of the chapter on Dictionaries, he
 provided continual guidance in the early stages of the book.
 
-\item Christoph Zwerschke sent several corrections and
-pedagogic suggestions, and explained the difference between {\em gleich}
-and {\em selbe}.
+\item Christoph Zwerschke envió muchas correcciones y
+sugerencias pedagógicas, y explicó la diferencia entre {\em gleich}
+y {\em selbe}.
 
 \item James Mayer sent us a whole slew of spelling and
 typographical errors, including two in the contributor list.
 
-\item Hayden McAfee caught a potentially confusing inconsistency
-between two examples.
+\item Hayden McAfee encontró una inconsistencia potencialmente confusa
+entre dos ejemplos.
 
-\item Angel Arnal is part of an international team of translators
-working on the Spanish version of the text.  He has also found several
-errors in the English version.
+\item Angel Arnal es parte de un equipo internacional de traductores
+trabajando en la versión en español del texto.  Además, encontró muchos
+errores en la versión en inglés.
 
-\item Tauhidul Hoque and Lex Berezhny created the illustrations
-in Chapter 1 and improved many of the other illustrations.
+\item Tauhidul Hoque y Lex Berezhny crearon las ilustraciones
+en el Capítulo 1 y mejoraron muchas de las otras ilustraciones.
 
-\item Dr. Michele Alzetta caught an error in Chapter 8 and sent
-some interesting pedagogic comments and suggestions about Fibonacci
-and Old Maid.
+\item Dr. Michele Alzetta encontró un error en el Capítulo 8 y envió
+algunos comentarios pedagógicos interesantes y sugerencias sobre Fibonacci
+y Old Maid.
 
-\item Andy Mitchell caught a typo in Chapter 1 and a broken example
-in Chapter 2.
+\item Andy Mitchell encontró un error tipográfico en el Capítulo 1 y un ejemplo roto
+en el Capítulo 2.
 
-\item Kalin Harvey suggested a clarification in Chapter 7 and
+\item Kalin Harvey sugirió una aclaración en el Capítulo 7 y
 caught some typos.
 
-\item Christopher P. Smith caught several typos and helped us
-update the book for Python 2.2.
+\item Christopher P. Smith encontró muchos errores tipográficos y nos ayudó a
+actualizar el libro para Python 2.2.
 
-\item David Hutchins caught a typo in the Foreword.
+\item David Hutchins encontró un error tipográfico en el Prólogo.
 
-\item Gregor Lingl is teaching Python at a high school in Vienna,
-Austria.  He is working on a German translation of the book,
-and he caught a couple of bad errors in Chapter 5.
+\item Gregor Lingl está enseñando Python en una escuela secundaria en Vienna,
+Austria.  Está trabajando en una traducción del libro al alemán
+y encontró un par de errores malos en el Capítulo 5.
 
-\item Julie Peters caught a typo in the Preface.
+\item Julie Peters encontró un error tipográfico en el Prefacio.
 
-\item Florin Oprina sent in an improvement in {\tt makeTime},
-a correction in {\tt printTime}, and a nice typo.
+\item Florin Oprina envió una mejora a {\tt makeTime},
+una corrección a {\tt printTime} y un buen error tipográfico.
 
 \item D.~J.~Webre sugirió una aclaración en el Capítulo 3.
 
 \item Ken encontró un puñado de errores en los Capítulos 8, 9 y 11.
 
-\item Ivo Wever caught a typo in Chapter 5 and suggested a clarification
-in Chapter 3.
+\item Ivo Wever encontró un error tipográfico en el Capítulo 5 y sugirió una aclaración
+en el capítulo 3.
 
 \item Curtis Yanko sugirió una aclaración en el Capítulo 2.
 
 \item Ben Logan envió una serie de errores tipográficos y problemas con la traducción
 del libro a HTML.
 
-\item Jason Armstrong vió la palabra perdida en el Capítulo 2.
+\item Jason Armstrong vio la palabra perdida en el Capítulo 2.
 
-\item Louis Cordier noticed a spot in Chapter 16 where the code
-didn't match the text.
+\item Louis Cordier notó un lugar en el Capítulo 16 donde el código
+no coincidía con el texto.
 
 \item Brian Cain sugirió varias aclaraciones en los Capítulos 2 y 3.
 
-\item Rob Black sent in a passel of corrections, including some
-changes for Python 2.2.
+\item Rob Black envió un montón de correcciones, incluyendo algunos
+cambios para Python 2.2.
 
-\item Jean-Philippe Rey at \'{E}cole Centrale
-Paris sent a number of patches, including some updates for Python 2.2
-and other thoughtful improvements.
+\item Jean-Philippe Rey de la \'{E}cole Centrale
+Paris envió una serie de parches, incluyendo algunas actualizaciones para Python 2.2
+y otras mejoras para pensar.
 
 \item Jason Mader en la George Washington University hizo una serie 
 de sugerencias y correcciones útiles.
 
-\item Jan Gundtofte-Bruun reminded us that ``a error'' is an error.
+\item Jan Gundtofte-Bruun nos recordó que ``a error'' es un error.
 
 \item Abel David y Alexis Dinno nos recordaron que el plural de
 ``matrix'' es ``matrices'', no ``matrixes''.  Este error estuvo en el
 libro por años, pero dos lectores con las mismas iniciales lo informaron en
 el mismo día. Extraño.
 
-\item Charles Thayer encouraged us to get rid of the semi-colons
-we had put at the ends of some statements and to clean up our
-use of ``argument'' and ``parameter''.
+\item Charles Thayer nos animó a deshacernos de los punto y coma que
+habíamos puesto al final de algunas sentencias y a limpiar nuestro
+uso de ``argumento'' and ``parámetro''.
 
-\item Roger Sperberg pointed out a twisted piece of logic in Chapter 3.
+\item Roger Sperberg advirtió sobre una lógica retorcida en el Capítulo 3.
 
-\item Sam Bull pointed out a confusing paragraph in Chapter 2.
+\item Sam Bull advirtió sobre un párrafo confuso en el Capítulo 2.
 
 \item Andrew Cheung pointed out two instances of ``use before def''.
 
@@ -573,55 +573,55 @@ of Debugging and a typo in Chapter 4.
 \item Douglas Wright pointed out a problem with floor division in
 {\tt arc}.
 
-\item Jared Spindor found some jetsam at the end of a sentence.
+\item Jared Spindor encontró algo de basura al final de una oración.
 
 \item Lin Peiheng envió una serie de sugerencias muy útiles.
 
 \item Ray Hagtvedt envió dos errores y un no tan error.
 
-\item Torsten H\"{u}bsch pointed out an inconsistency in Swampy.
+\item Torsten H\"{u}bsch señaló una inconsistencia en Swampy.
 
-\item Inga Petuhhov corrected an example in Chapter 14.
+\item Inga Petuhhov corrigió un ejemplo en el Capítulo 14.
 
-\item Arne Babenhauserheide sent several helpful corrections.
+\item Arne Babenhauserheide envió muchas correcciones útiles.
 
-\item Mark E. Casida is is good at spotting repeated words.
+\item Mark E. Casida es es bueno mirando palabras repetidas.
 
-\item Scott Tyler filled in a that was missing.  And then sent in
-a heap of corrections.
+\item Scott Tyler rellenó una que faltaba.  Y envió
+un montón de correcciones.
 
 \item Gordon Shephard envió varias correcciones, todas en correos
-seoarados.
+separados.
 
-\item Andrew Turner {\tt spot}ted an error in Chapter 8.
+\item Andrew Turner {\tt en}contró un error en el Capítulo 8.
 
 \item Adam Hobart fixed a problem with floor division in {\tt arc}.
 
-\item Daryl Hammond and Sarah Zimmerman pointed out that I served
-up {\tt math.pi} too early.  And Zim spotted a typo.
+\item Daryl Hammond y Sarah Zimmerman advirtieron que serví
+{\tt math.pi} demasiado pronto.  Y Zim vio un error tipográfico.
 
-\item George Sass found a bug in a Debugging section.
+\item George Sass encontró un error en una sección de Depuración.
 
-\item Brian Bingham suggested Exercise~\ref{exrotatepairs}.
+\item Brian Bingham sugirió el Ejercicio~\ref{exrotatepairs}.
 
-\item Leah Engelbert-Fenton pointed out that I used {\tt tuple}
-as a variable name, contrary to my own advice.  And then found
-a bunch of typos and a ``use before def''.
+\item Leah Engelbert-Fenton advirtió que usé {\tt tuple}
+como un nombre de variable, contrario a mi propio consejo.  Y luego encontró
+un montón de errores tipográficos y un ``uso antes de definir''.
 
-\item Joe Funke spotted a typo.
+\item Joe Funke vio un error tipográfico.
 
 \item Chao-chao Chen encontró una inconsistencia en el ejemplo de Fibonacci.
 
 \item Jeff Paine sabe la diferencia entre space y spam.
 
-\item Lubos Pintes sent in a typo.
+\item Lubos Pintes envió un error tipográfico.
 
 \item Gregg Lind y Abigail Heithoff sugirieron el Ejercicio~\ref{checksum}.
 
-\item Max Hailperin has sent in a number of corrections and
-  suggestions.  Max is one of the authors of the extraordinary {\em
-    Concrete Abstractions}, which you might want to read when you are
-  done with this book.
+\item Max Hailperin ha enviado una serie de correcciones y
+  sugerencias.  Max es uno de los autores del extraordinario {\em
+    Concrete Abstractions}, que tal vez quieras leer cuando termines
+  con este libro.
 
 \item Chotipat Pornavalai encontró un error en un mensaje de error.
 
@@ -629,33 +629,33 @@ a bunch of typos and a ``use before def''.
 
 \item Eric Pashman envió una serie de correcciones para los Capítulos 4--11.
 
-\item Miguel Azevedo found some typos.
+\item Miguel Azevedo encontró algunos errores tipográficos.
 
-\item Jianhua Liu sent in a long list of corrections.
+\item Jianhua Liu envió una larga lista de correcciones.
 
-\item Nick King found a missing word.
+\item Nick King encontró una palabra que faltaba.
 
 \item Martin Zuther envió una larga lista de sugerencias.
 
 \item Adam Zimmerman found an inconsistency in my instance
 of an ``instance'' and several other errors.
 
-\item Ratnakar Tiwari suggested a footnote explaining degenerate
-triangles.
+\item Ratnakar Tiwari sugirió una nota al pie explicando los triángulos
+degenerados.
 
 \item Anurag Goel sugirió otra solución para \verb"is_abecedarian"
 y envió algunas correcciones adicionales.  Y sabe cómo
 deletrear Jane Austen.
 
-\item Kelli Kratzer spotted one of the typos.
+\item Kelli Kratzer vio uno de los errores tipográficos.
 
-\item Mark Griffiths pointed out a confusing example in Chapter 3.
+\item Mark Griffiths señaló un ejemplo confuso en el Capítulo 3.
 
 \item Roydan Ongie encontró un error en mi método de Newton.
 
 \item Patryk Wolowiec me ayudó con un problema en la versión HTML.
 
-\item Mark Chonofsky told me about a new keyword in Python 3.
+\item Mark Chonofsky me habló de una nueva palabra clave en Python 3.
 
 \item Russell Coleman me ayudó con mi geometría.
 
@@ -664,72 +664,72 @@ pattern but didn't mention it by name.
 
 \item St\'{e}phane Morin envió varias correcciones y sugerencias.
 
-\item Paul Stoop corrected a typo in \verb+uses_only+.
+\item Paul Stoop corrigió un error tipográfico en \verb+uses_only+.
 
-\item Eric Bronner pointed out a confusion in the discussion of the
-order of operations.
+\item Eric Bronner advirtió sobre una confusión en la discusión del
+orden de operaciones.
 
-\item Alexandros Gezerlis set a new standard for the number and
-quality of suggestions he submitted.  We are deeply grateful!
+\item Alexandros Gezerlis estableció un nuevo estándar para el número y
+la calidad de sugerencias que envió.  ¡Estamos profundamente agradecidos!
 
 \item Gray Thomas knows his right from his left.
 
-\item Giovanni Escobar Sosa sent a long list of corrections and
-suggestions.
+\item Giovanni Escobar Sosa envió una larga lista de correcciones y
+sugerencias.
 
-\item Daniel Neilson corrected an error about the order of operations.
+\item Daniel Neilson corrigió un error sobre el orden de operaciones.
 
-\item Will McGinnis pointed out that {\tt polyline} was defined
-differently in two places.
+\item Will McGinnis advirtió que {\tt polyline} fue definida
+de manera diferente en dos lugares.
 
 \item Frank Hecker pointed out an exercise that was under-specified, and
 some broken links.
 
-\item Animesh B helped me clean up a confusing example.
+\item Animesh B me ayudó a limpiar un ejemplo confuso.
 
-\item Martin Caspersen found two round-off errors.
+\item Martin Caspersen encontró dos errores de redondeo.
 
-\item Gregor Ulm sent several corrections and suggestions.
+\item Gregor Ulm envió varias correcciones y sugerencias.
 
-\item Dimitrios Tsirigkas suggested I clarify an exercise.
+\item Dimitrios Tsirigkas me sugirió que aclarara un ejercicio.
 
-\item Carlos Tafur sent a page of corrections and suggestions.
+\item Carlos Tafur envió una página de correcciones y sugerencias.
 
-\item Martin Nordsletten found a bug in an exercise solution.
+\item Martin Nordsletten encontró un error en una solución de un ejercicio.
 
 \item Sven Hoexter pointed out that a variable named {\tt input}
 shadows a build-in function.
 
-\item Stephen Gregory pointed out the problem with {\tt cmp}
-in Python 3.
+\item Stephen Gregory advirtió el problema con {\tt cmp}
+en Python 3.
 
-\item Ishwar Bhat corrected my statement of Fermat's last theorem.
+\item Ishwar Bhat corrigió mi enunciado del último teorema de Fermat.
 
-\item Andrea Zanella translated the book into Italian, and sent a
-number of corrections along the way.
+\item Andrea Zanella tradujo el libro al italiano y envió una
+serie de correcciones en el camino.
 
-\item Many, many thanks to Melissa Lewis and Luciano Ramalho for
-  excellent comments and suggestions on the second edition.
+\item Muchas, muchas gracias a Melissa Lewis y Luciano Ramalho por
+  los excelentes comentarios y sugerencias sobre la segunda edición.
 
-\item Thanks to Harry Percival from PythonAnywhere for his help
-getting people started running Python in a browser.
+\item Gracias a Harry Percival de PythonAnywhere por su ayuda
+al hacer que la gente comience ejecutando Python en un navegador.
 
-\item Xavier Van Aubel made several useful corrections in the second
-edition.
+\item Xavier Van Aubel hizo muchas correcciones útiles en la segunda
+edición.
 
 \item William Murray corrected my definition of floor division.
 
-\item Per Starb{\"a}ck brought me up to date on universal newlines in Python 3.
+\item Per Starb{\"a}ck me puso al día sobre nuevas líneas universales en Python 3.
 
 \item Laurent Rosenfeld y Mihaela Rotaru tradujeron este libro al francés.  En el camino, me enviaron muchas correcciones y sugerencias.
 
 % ENDCONTRIB
 
-In addition, people who spotted typos or made corrections include
+Adicionalmente, las personas que vieron errores tipográficos o hicieron correcciones incluyen a
 Czeslaw Czapla, Dale Wilson, Francesco Carlo Cimini,
 Richard Fursa, Brian McGhie, Lokesh Kumar Makani, Matthew Shultz, Viet
 Le, Victor Simeone, Lars O.D. Christensen, Swarup Sahoo, Alix Etienne,
-Kuang He, Wei Huang, Karen Barber, and Eric Ransom.
+Kuang He, Wei Huang, Karen Barber y Eric Ransom.
 
 
 
