--- a/book/book.tex
+++ b/book/book.tex
@@ -351,7 +351,7 @@ la Licencia de documentación libre de GNU, que me ayudó
 a hacer posible mi colaboración con Jeff y Chris, y a Creative
 Commons por la licencia que uso ahora.
 \index{Licencia de documentación libre de GNU}
-\index{GNU, Licencia de documentación libre}
+\index{GNU!Licencia de documentación libre}
 \index{Creative Commons}
 
 Gracias a los editores de Lulu que trabajaron en
@@ -606,7 +606,7 @@ separados.
 
 \item Leah Engelbert-Fenton advirtió que usé {\tt tuple}
 como un nombre de variable, contrario a mi propio consejo.  Y luego encontró
-un montón de errores tipográficos y un ``uso antes de definir''.
+un montón de errores tipográficos y un ``use before def''.
 
 \item Joe Funke vio un error tipográfico.
 
@@ -918,7 +918,7 @@ una función, así que no usa paréntesis.
 \index{Python 2}
 
 \begin{verbatim}
->>> print '¡Hola, Mundo!'
+>>> print 'Hello, World!'
 \end{verbatim}
 %
 Esta distinción tendrá más sentido pronto, pero eso es suficiente para
@@ -1907,7 +1907,7 @@ función, es el tipo del argumento.
 \index{paréntesis!argumento en}
 
 Es común decir que una función ``toma'' un argumento y ``devuelve''
-un resultado.  El resultado también se llama el {\bf valor de retorno} (en inglés, {\em return value}).
+un resultado.  El resultado también se llama {\bf valor de retorno} (en inglés, {\em return value}).
 \index{argumento}
 \index{valor de retorno}\index{return value}
 
@@ -2046,7 +2046,7 @@ Hasta aquí, hemos visto los elementos de un programa---variables,
 expresiones y sentencias---de forma aislada, sin hablar sobre cómo
 combinarlos.
 
-Una de las características más útiles de los lengiajes de programación es su
+Una de las características más útiles de los lenguajes de programación es su
 posibilidad de tomar pequeños bloques de construcción y {\bf componerlos}.  Por
 ejemplo, el argumento de una función puede ser cualquier tipo de expresión,
 incluyendo operadores aritméticos:
@@ -2073,7 +2073,7 @@ más tarde).
 SyntaxError: can't assign to operator
 \end{verbatim}
 %
-\index{SyntaxError}
+\index{SyntaxError}\index{error de sintaxis}\index{sintaxis!error de}
 \index{excepción!SyntaxError}
 
 
@@ -2097,8 +2097,8 @@ def print_lyrics():
 %
 {\tt def} es una palabra clave que indica que esta es una definición
 de función. El nombre de la función es \verb"print_lyrics".  Las
-reglas para los nombres de funciones son las mismas que para los nombres de variables: letras,
-números y guión bajo son legales, pero el primer caracter
+reglas para los nombres de funciones son las mismas que para los nombres de variables: las letras,
+los números y el guión bajo son legales, pero el primer caracter
 no puede ser un número.  No puedes usar una palabra clave como nombre de una función,
 y deberías evitar tener una variable y una función con el mismo
 nombre.
@@ -2108,31 +2108,31 @@ nombre.
 
 Los paréntesis vacíos después del nombre indican que esta función
 no toma ningún argumento.
-\index{parentheses!empty}
-\index{header}
-\index{body}
-\index{indentation}
-\index{colon}
+\index{paréntesis vacíos}
+\index{encabezado}\index{header}
+\index{cuerpo}\index{body}
+\index{sangría}
+\index{dos puntos}
 
-The first line of the function definition is called the {\bf header};
-the rest is called the {\bf body}.  The header has to end with a colon
-and the body has to be indented.  By convention, indentation is
-always four spaces.  The body can contain
-any number of statements.
+La primera línea de la definición de función se llama {\bf encabezado} (en inglés, {\emph header});
+el resto se llama {\bf cuerpo} (en inglés, {\emph body}).  El encabezado tiene que terminar con el signo de dos puntos
+y el cuerpo tiene que tener sangría.  Por convención, la sangría es
+siempre cuatro espacios.  El cuerpo puede contener
+cualquier número de sentencias.
 
-The strings in the print statements are enclosed in double
-quotes.  Single quotes and double quotes do the same thing;
-most people use single quotes except in cases like this where
-a single quote (which is also an apostrophe) appears in the string.
+Las cadenas en las sentencias print están encerradas en comillas
+dobles.  Las comillas simples y las comillas dobles hacen lo mismo;
+la mayoría de la gente usa comillas simples excepto en casos como este donde
+una comilla simple (que también es un apóstrofe) aparece en la cadena.
 
-All quotation marks (single and double)
-must be ``straight quotes'', usually
-located next to Enter on the keyboard.  ``Curly quotes'', like
-the ones in this sentence, are not legal in Python.
+Todas las comillas (simples y dobles)
+deben ser ``comillas rectas'', usualmente
+ubicadas al lado de Entrar en el teclado.  ``Comillas tipográficas'', como
+las de esta oración, no son legales en Python.
 
-If you type a function definition in interactive mode, the interpreter
-prints dots ({\tt ...}) to let you know that the definition
-isn't complete:
+Si escribes una definición de función en modo interactivo, el intérprete
+muestra puntos ({\tt ...}) que te hacen saber que la definición
+no está completa:
 \index{ellipses}
 
 \begin{verbatim}
@@ -2144,10 +2144,10 @@ isn't complete:
 %
 Para terminar una función, tienes que insertar una línea vacía.
 
-Defining a function creates a {\bf function object}, which
-has type \verb"function":
-\index{function type}
-\index{type!function}
+Al definir una función se crea un {\bf objeto de función}, que tiene
+tipo \verb"function":
+\index{tipo function}
+\index{function!tipo}
 
 \begin{verbatim}
 >>> print(print_lyrics)
@@ -2156,8 +2156,8 @@ has type \verb"function":
 <class 'function'>
 \end{verbatim}
 %
-The syntax for calling the new function is the same as
-for built-in functions:
+La sintaxis para llamar a la nueva función es la misma que
+para las funciones incorporadas:
 
 \begin{verbatim}
 >>> print_lyrics()
@@ -2165,9 +2165,9 @@ I'm a lumberjack, and I'm okay.
 I sleep all night and I work all day.
 \end{verbatim}
 %
-Once you have defined a function, you can use it inside another
-function.  For example, to repeat the previous refrain, we could write
-a function called \verb"repeat_lyrics":
+Una vez que hayas definido una función, puedes usarla dentro de otra
+función.  Por ejemplo, para repetir el estribillo anterior, podríamos escribir
+una función llamada \verb"repeat_lyrics":
 
 \begin{verbatim}
 def repeat_lyrics():
@@ -2175,7 +2175,7 @@ def repeat_lyrics():
     print_lyrics()
 \end{verbatim}
 %
-And then call \verb"repeat_lyrics":
+Y luego llamar a \verb"repeat_lyrics":
 
 \begin{verbatim}
 >>> repeat_lyrics()
@@ -2185,7 +2185,7 @@ I'm a lumberjack, and I'm okay.
 I sleep all night and I work all day.
 \end{verbatim}
 %
-But that's not really how the song goes.
+Pero así no es realmente como sigue la canción.
 
 
 \section{Definiciones y usos}
